--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -29,15 +29,15 @@ jobs:
       id: detect_env
       run: |
         if git diff --name-only HEAD~1 | grep '^lab/'; then
-          echo "env_name=lab" >> $GITHUB_ENV
+          echo "env_name=lab" >> $GITHUB_OUTPUT
         elif git diff --name-only HEAD~1 | grep '^prod/'; then
-          echo "env_name=prod" >> $GITHUB_ENV
+          echo "env_name=prod" >> $GITHUB_OUTPUT
         else
-          echo "env_name=lab" >> $GITHUB_ENV
+          echo "env_name=lab" >> $GITHUB_OUTPUT
         fi
 
-    - name: Output Environment
-      run: echo "Environment is $env_name"
+    # - name: Output Environment
+    #   run: echo "Environment is $env_name"
   
   install-argocd:
     needs: set-environment
