--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -5,25 +5,25 @@ on:
   #   branches:
   #     - main
   workflow_dispatch:
-    inputs:
-        environment:
-          description: "The environment to deploy to"
-          required: true
-          default: "lab"
-          type: choice
-          options:
-            - lab
-            - prod
+    # inputs:
+    #     environment:
+    #       description: "The environment to deploy to"
+    #       required: true
+    #       default: "lab"
+    #       type: choice
+    #       options:
+    #         - lab
+    #         - prod
 
 env:
   TARGETED_CLUSTER: lab 
-  ENV_NAME: ${{ inputs.environment || 'lab'}}
+  #ENV_NAME: ${{ inputs.environment || 'lab'}}
 
 jobs:
   set-environment:
     runs-on: self-hosted
     outputs:
-      CJ_ENV_NAME: ${{ steps.detect_env.outputs.env_name }}
+      ENV_NAME: ${{ steps.detect_env.outputs.env_name }}
     steps:
     - name: Determine Environment
       id: detect_env
@@ -35,13 +35,10 @@ jobs:
         else
           echo "env_name=lab" >> $GITHUB_OUTPUT
         fi
-
-    # - name: Output Environment
-    #   run: echo "Environment is $env_name"
   
   install-argocd:
     needs: set-environment
-    environment: ${{ inputs.environment || 'lab'}}
+    environment: ${{ needs.set-environment.outputs.ENV_NAME }}
     runs-on: self-hosted
 
     steps:
@@ -51,15 +48,13 @@ jobs:
 
     # - name: Set Environment Name Variable Dynamically
     #   id: set-environment-variable
-    #   run: echo "env_name=${{ needs.set-environment.outputs.ENV_NAME }}" >> $GITHUB_ENV
+    #   run: echo "ENV_NAME=${{ needs.set-environment.outputs.ENV_NAME }}" >> $GITHUB_ENV
 
     # Set Correct Kubernetes Context
     - name: Set Correct Kubernetes Context
       run: |
-        echo "${{ needs.set-environment.outputs.CJ_ENV_NAME }}"
-        echo $CJ_ENV_NAME
+        echo "${{ needs.set-environment.outputs.ENV_NAME }}"
         echo "${{ vars.ARGOCD_PORT }}"
-        echo ${{ inputs.environment || 'lab'}}
         kubectl config use-context "$ENV_NAME-kubernetes-admin@${{ env.ENV_NAME }}-cluster.jjland.local"
 
     # Install Argo CD
