--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -80,7 +80,7 @@ jobs:
     - name: Expose Argo CD Server
       run: |
         kubectl patch svc argocd-server -n argocd \
-          -p '{"spec": {"type": "NodePort", "ports": [{"port": 443, "targetPort": 8080, "nodePort": $ARGOCD_PORT }]}}'
+          -p '{"spec": {"type": "NodePort", "ports": [{"port": 443, "targetPort": 8080, "nodePort": '"$ARGOCD_PORT"' }]}}'
 
     # Log in to ArgoCD
     - name: Login to ArgoCD
