--- a/.github/workflows/build-ceph-cluster.yml
+++ b/.github/workflows/build-ceph-cluster.yml
@@ -44,7 +44,7 @@ jobs:
       run: |
         cd ansible-role-microceph
         source venv/bin/activate
-        ansible-playbook microceph_cluster_pb.yml -i inventory.yml --become --become-user=root \
+        ansible-playbook microceph_cluster_pb.yml -i inventory.yml \
             -e "ansible_password=${{ secrets.SSH_PASS }}" \
-            -e "ansible_become_pass=${{ secrets.SSH_PASS }}" \
+            -e "ansible_become_pass=${{ secrets.ROOT_SSH_PASS }}" \
             --tags build-cluster,setup-gui
