--- a/microceph/vars-lab.yml
+++ b/microceph/vars-lab.yml
@@ -3,6 +3,6 @@ microceph_cluster_nodes: ceph_nodes
 microceph_seed_node: rocky9-lab-node1
 microceph_encrypt_data: False
 microceph_disk_devices:
-  - /dev/vdb
+  - /dev/disk/by-id/virtio-vdisk2
 ceph_release: squid
 distro: el9
