--- a/.github/workflows/run-kubespray.yml
+++ b/.github/workflows/run-kubespray.yml
@@ -92,7 +92,7 @@ jobs:
         run: |
           source venv/bin/activate
           ansible-playbook -i inventory/${CHANGED_CLUSTER}/hosts.yml reset.yml \
-            --become --become-user=root -e "ansible_password=${{ secrets.SSH_PASS }}" -e "ansible_become_pass=${{ secrets.SSH_PASS }}"
+            --become --become-user=root -e "ansible_password=${{ secrets.SSH_PASS }}" -e "ansible_become_pass=${{ secrets.SSH_PASS }} -e "reset_confirmation=yes"
 
   #install-argocd:
     #uses: .github/workflows/install-argocd.yml  # Path to the reusable workflow
