--- a/clusters/LAB/group_vars/k8s_cluster/k8s-cluster.yml
+++ b/clusters/LAB/group_vars/k8s_cluster/k8s-cluster.yml
@@ -158,7 +158,7 @@ kube_encrypt_secret_data: false
 
 # DNS configuration.
 # Kubernetes cluster name, also will be used as DNS domain
-cluster_name: prod-cluster.jjland.local
+cluster_name: lab-cluster.jjland.local
 # Subdomains of DNS domain to be resolved via /etc/resolv.conf for hostnet pods
 ndots: 2
 # dns_timeout: 2
