--- a/.github/workflows/kubespray-cluster-create.yml
+++ b/.github/workflows/kubespray-cluster-create.yml
@@ -96,12 +96,20 @@ jobs:
           ls inventory/${CHANGED_CLUSTER}/
 
       # Step 8: Run Kubespray Playbook
-      - name: Run Kubespray playbook
-        working-directory: ./kubespray
-        run: |
-          source venv/bin/activate
-          ansible-playbook -i inventory/${CHANGED_CLUSTER}/hosts.yml cluster.yml \
-            --become --become-user=root -e "ansible_password=${{ secrets.SSH_PASS }}" -e "ansible_become_pass=${{ secrets.SSH_PASS }}" -e "reset_confirmation=yes"
+      # - name: Run Kubespray playbook
+      #   working-directory: ./kubespray
+      #   run: |
+      #     source venv/bin/activate
+      #     ansible-playbook -i inventory/${CHANGED_CLUSTER}/hosts.yml cluster.yml \
+      #       --become --become-user=root -e "ansible_password=${{ secrets.SSH_PASS }}" -e "ansible_become_pass=${{ secrets.SSH_PASS }}" -e "reset_confirmation=yes"
 
-  #install-argocd:
+      - name: Run Update K8s Certs playbook
+        #working-directory: ./kubespray
+        run: |
+          source ./kubespray/venv/bin/activate
+          ansible-playbook -i ./kubespray/inventory/${CHANGED_CLUSTER}/hosts.yml ./ansible/update-k8s-certs.yml \
+              -e "ansible_password=${{ secrets.SSH_PASS }}" -e "ansible_become_pass=${{ secrets.SSH_PASS }}" \
+              -e "environment_context=$CHANGED_CLUSTER
+    
+    
     #uses: .github/workflows/install-argocd.yml  # Path to the reusable workflow
