--- a/.github/workflows/kubespray-cluster-create.yml
+++ b/.github/workflows/kubespray-cluster-create.yml
@@ -109,7 +109,7 @@ jobs:
           source ./kubespray/venv/bin/activate
           ansible-playbook -i ./kubespray/inventory/${CHANGED_CLUSTER}/hosts.yml ./ansible/update-k8s-certs-pb.yml \
               -e "ansible_password=${{ secrets.SSH_PASS }}" -e "ansible_become_pass=${{ secrets.SSH_PASS }}" \
-              -e "environment_context=$CHANGED_CLUSTER
+              -e "environment_context=$CHANGED_CLUSTER"
     
     
     #uses: .github/workflows/install-argocd.yml  # Path to the reusable workflow
