--- a/ansible/update-k8s-certs-pb.yml
+++ b/ansible/update-k8s-certs-pb.yml
@@ -53,7 +53,7 @@
         msg: "Successfully fetched {{ item.src }} to {{ item.dest }}"
       loop: "{{ cert_files }}"
 
-    - name: Copy a new "sudoers" file into place, after passing validation with visudo
+    - name: Copy kube config from repo to runner based on environment context
       ansible.builtin.copy:
         src: "../kubespray/inventory/{{ environment_context }}/kubeconfig"
         dest: ~/.kube/config
