--- a/.github/workflows/create-refresh-kube-configs.yml
+++ b/.github/workflows/create-refresh-kube-configs.yml
@@ -52,6 +52,6 @@ jobs:
             -X PUT \
             -H "Authorization: Bearer $GITHUB_TOKEN" \
             -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/${{ github.repository }}/actions/secrets/KUBECONFIG_${{ github.event.inputs.environment | upper }} \
+            https://api.github.com/repos/${{ github.repository }}/actions/secrets/KUBECONFIG_${{ github.event.inputs.environment }} \
             -d '{"encrypted_value": "'"$KUBECONFIG_BASE64"'"}'
 
