--- a/.github/workflows/create-refresh-kube-configs.yml
+++ b/.github/workflows/create-refresh-kube-configs.yml
@@ -50,7 +50,7 @@ jobs:
         run: |
           curl \
             -X PUT \
-            -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "Authorization: Bearer $PAT_TOKEN" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{ github.repository }}/environments/${{ github.event.inputs.environment }}/secrets/KUBECONFIG_BASE64 \
             -d '{"encrypted_value": "'"$KUBECONFIG_BASE64"'"}'
