--- a/.github/workflows/create-refresh-kube-configs.yml
+++ b/.github/workflows/create-refresh-kube-configs.yml
@@ -46,11 +46,11 @@ jobs:
       # Step 5: Store the Base64 encoded config as a GitHub secret (requires admin token)
       - name: Store Kubernetes Config as Secret
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           curl \
             -X PUT \
-            -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "Authorization: Bearer $PAT_TOKEN" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{ github.repository }}/environments/${{ github.event.inputs.environment }}/secrets/KUBECONFIG_BASE64 \
             -d '{"encrypted_value": "'"$KUBECONFIG_BASE64"'"}'
