--- a/.github/workflows/create-refresh-kube-configs.yml
+++ b/.github/workflows/create-refresh-kube-configs.yml
@@ -53,5 +53,6 @@ jobs:
             -H "Authorization: Bearer $PAT_TOKEN" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{ github.repository }}/environments/${{ github.event.inputs.environment }}/secrets/KUBECONFIG_BASE64 \
-            -d '{"encrypted_value": "'"$KUBECONFIG_BASE64"'"}'
+            -d '{"encrypted_value": "'"$KUBECONFIG_BASE64"'",
+                  "key_id":"012345678912345678"}'
 
