--- a/.github/workflows/create-refresh-kube-configs.yml
+++ b/.github/workflows/create-refresh-kube-configs.yml
@@ -49,7 +49,7 @@ jobs:
             PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           curl \
-            -X PUT \
+            -X GET \
             -H "Authorization: Bearer $PAT_TOKEN" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{ github.repository }}/actions/secrets/public-key
