--- a/.github/workflows/create-refresh-kube-configs.yml
+++ b/.github/workflows/create-refresh-kube-configs.yml
@@ -51,7 +51,7 @@ jobs:
             -X GET \
             -H "Authorization: Bearer $PAT_TOKEN" \
             -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/${{ github.repository }}/actions/secrets/public-key)
+            https://api.github.com/repos/${{ github.repository }}/environments/${{ github.event.inputs.environment }}/secrets/public-key)
             echo "Public key API response: $response"
             key_id=$(echo "$response" | jq -r '.key_id')
             echo "key_id=$key_id" >> $GITHUB_ENV
