--- a/.github/workflows/lab-setup-test-k8s-access.yml
+++ b/.github/workflows/lab-setup-test-k8s-access.yml
@@ -27,20 +27,31 @@ jobs:
           echo "kubectl already installed."
         fi
         kubectl version --client
-
+    
     - name: Combine and decode kubeconfigs
-      env:
-        KUBE_CONFIG_1: ${{ secrets.KUBECONFIG_BASE64_PROD }}
-        KUBE_CONFIG_2: ${{ secrets.KUBECONFIG_BASE64_LAB }}
       run: |
-        # Decode the first config and append it to the kube config
-        echo "$KUBE_CONFIG_1" | base64 --decode > $HOME/.kube/config1.yaml
-        # Decode the second config and append it to the kube config
-        echo "$KUBE_CONFIG_2" | base64 --decode > $HOME/.kube/config2.yaml
+        # Fetch the list of environments using GitHub API
+        response=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          "https://api.github.com/repos/${{ github.repository }}/environments")
         
-        # Combine both config files into the .kube/config
-        KUBECONFIG=$HOME/.kube/config1.yaml:$HOME/.kube/config2.yaml kubectl config view --flatten > $HOME/.kube/config
-        chmod 600 $HOME/.kube/config
+        # Extract environment names and store them in a list
+        environments=$(echo "$response" | jq -r '.environments[].name')
+        
+        # Save the list as a GitHub Actions output
+        echo "environments=$environments" >> $GITHUB_OUTPUT
+    
+    #   env:
+    #     KUBE_CONFIG_1: ${{ secrets.KUBECONFIG_BASE64_PROD }}
+    #     KUBE_CONFIG_2: ${{ secrets.KUBECONFIG_BASE64_LAB }}
+    #   run: |
+    #     # Decode the first config and append it to the kube config
+    #     echo "$KUBE_CONFIG_1" | base64 --decode > $HOME/.kube/config1.yaml
+    #     # Decode the second config and append it to the kube config
+    #     echo "$KUBE_CONFIG_2" | base64 --decode > $HOME/.kube/config2.yaml
+        
+    #     # Combine both config files into the .kube/config
+    #     KUBECONFIG=$HOME/.kube/config1.yaml:$HOME/.kube/config2.yaml kubectl config view --flatten > $HOME/.kube/config
+    #     chmod 600 $HOME/.kube/config
 
     - name: Verify Kubeconfig
       run: |
