--- a/.github/workflows/lab-setup-test-k8s-access.yml
+++ b/.github/workflows/lab-setup-test-k8s-access.yml
@@ -38,7 +38,7 @@ jobs:
         environments=$(echo "$response" | jq -r '.environments[].name')
         
         # Save the list as a GitHub Actions output
-        echo "environments=$environments" >> $GITHUB_ENV
+        echo $environments
     
     #   env:
     #     KUBE_CONFIG_1: ${{ secrets.KUBECONFIG_BASE64_PROD }}
