--- a/.github/workflows/lab-setup-test-k8s-access.yml
+++ b/.github/workflows/lab-setup-test-k8s-access.yml
@@ -38,7 +38,7 @@ jobs:
         environments=$(echo "$response" | jq -r '.environments[].name')
         
         # Save the list as a GitHub Actions output
-        echo "environment=$environments" >> $GITHUB_ENV
+        # echo "environment=$environments" >> $GITHUB_ENV
 
         for environment in ${{ steps.list-environments.outputs.environments }}; do
           echo "Processing environment: $environment"
