--- a/.github/workflows/lab-setup-test-k8s-access.yml
+++ b/.github/workflows/lab-setup-test-k8s-access.yml
@@ -30,33 +30,36 @@ jobs:
     
     - name: Combine and decode kubeconfigs
       run: |
+        mkdir -p $HOME/.kube
+        combined_config=$HOME/.kube/config
+        
         # Fetch the list of environments using GitHub API
         response=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           "https://api.github.com/repos/${{ github.repository }}/environments")
         
         # Extract environment names and store them in a list
         environments=$(echo "$response" | jq -r '.environments[].name')
-        
-        # Save the list as a GitHub Actions output
-        # echo "environment=$environments" >> $GITHUB_ENV
 
         for environment in $environments; do
           echo "Processing environment: $environment"
+          # Check if the secret exists
+          if [ -n "${{ secrets.KUBECONFIG_BASE64 }}" ]; then
+            echo "Found KUBECONFIG_BASE64 secret for $environment"
+
+            # Decode the secret and append it to the combined kubeconfig
+            echo "${{ secrets.KUBECONFIG_BASE64 }}" | base64 --decode > $HOME/.kube/$environment.yaml
+            KUBECONFIG=$KUBECONFIG:$HOME/.kube/$environment.yaml
+          else
+            echo "No KUBECONFIG_BASE64 secret found for $environment"
+          fi
+        done
+
+        # Flatten the combined kubeconfig
+        KUBECONFIG=$KUBECONFIG kubectl config view --flatten > $combined_config
+        chmod 600 $combined_config
+        echo "Combined kubeconfig saved to $combined_config"
         done
     
-    #   env:
-    #     KUBE_CONFIG_1: ${{ secrets.KUBECONFIG_BASE64_PROD }}
-    #     KUBE_CONFIG_2: ${{ secrets.KUBECONFIG_BASE64_LAB }}
-    #   run: |
-    #     # Decode the first config and append it to the kube config
-    #     echo "$KUBE_CONFIG_1" | base64 --decode > $HOME/.kube/config1.yaml
-    #     # Decode the second config and append it to the kube config
-    #     echo "$KUBE_CONFIG_2" | base64 --decode > $HOME/.kube/config2.yaml
-        
-    #     # Combine both config files into the .kube/config
-    #     KUBECONFIG=$HOME/.kube/config1.yaml:$HOME/.kube/config2.yaml kubectl config view --flatten > $HOME/.kube/config
-    #     chmod 600 $HOME/.kube/config
-
     - name: Verify Kubeconfig
       run: |
         kubectl config get-contexts
