--- a/.github/workflows/lab-setup-test-k8s-access.yml
+++ b/.github/workflows/lab-setup-test-k8s-access.yml
@@ -37,31 +37,28 @@ jobs:
       fail-fast: false
 
     steps:
-    
-    - name: Combine and decode kubeconfigs
-      env:
-          ENVIRONMENT: ${{ matrix.environment }}
+    - name: Set up directories
       run: |
         mkdir -p $HOME/.kube
-        combined_config=$HOME/.kube/config
-        
-        # # Fetch the list of environments using GitHub API
-        # response=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-        #   "https://api.github.com/repos/${{ github.repository }}/environments")
-        
-        # Extract environment names and store them in a list
-        # environments=$(echo "$response" | jq -r '.environments[].name')
+        echo "Kube config directory created at $HOME/.kube"
 
-        echo "Processing environment: $environment"
+    - name: Combine and decode kubeconfigs
+      env:
+        ENVIRONMENT: ${{ matrix.environment }}
+      run: |
+        kubeconfig_path="$HOME/.kube/${{ matrix.environment }}.yaml"
+        
+        echo "Processing environment: $ENVIRONMENT"
+
         # Check if the secret exists
-        if [ -n "${{ secrets.KUBECONFIG_BASE64 }}" ]; then
-          echo "Found KUBECONFIG_BASE64 secret for ${{ matrix.environment }}"
+        if [[ -n "${{ secrets.KUBECONFIG_BASE64 }}" ]]; then
+          echo "Found KUBECONFIG_BASE64 secret for $ENVIRONMENT"
 
-          # Decode the secret and append it to the combined kubeconfig
-          echo "${{ secrets.KUBECONFIG_BASE64 }}" | base64 --decode > $HOME/.kube/${{ matrix.environment }}.yaml
-          #KUBECONFIG=$KUBECONFIG:$HOME/.kube/${{ matrix.environment }}.yaml
+          # Decode the secret and save it as a kubeconfig file
+          echo "${{ secrets.KUBECONFIG_BASE64 }}" | base64 --decode > "$kubeconfig_path"
+          echo "Kubeconfig for $ENVIRONMENT saved at $kubeconfig_path"
         else
-          echo "No KUBECONFIG_BASE64 secret found for ${{ matrix.environment }}"
+          echo "No KUBECONFIG_BASE64 secret found for $ENVIRONMENT"
         fi
 
         # # Flatten the combined kubeconfig
