--- a/.github/workflows/lab-setup-test-k8s-access.yml
+++ b/.github/workflows/lab-setup-test-k8s-access.yml
@@ -36,6 +36,8 @@ jobs:
         environment: ["lab", "prod"]
       fail-fast: false
 
+    environment: ${{ matrix.environment }}
+
     steps:
     - name: Set up directories
       run: |
