--- a/.github/workflows/create-refresh-kube-configs.yml
+++ b/.github/workflows/create-refresh-kube-configs.yml
@@ -32,8 +32,12 @@ jobs:
       - name: Render Kubernetes Config
         run: |
           export ENV_NAME=${{ github.event.inputs.environment }}
+          export KUBERNETES_API_URL=${{ vars.KUBERNETES_API_URL }}
           . venv/bin/activate
-          jinja2 ./ansible/templates/kubeconfig-template.j2 -D environment=$ENV_NAME KUBERNETES_API_URL=${{ vars.KUBERNETES_API_URL }} > kubeconfig.yaml
+          jinja2 ./ansible/templates/kubeconfig-template.j2 \
+          -D environment=$ENV_NAME \
+          -D KUBERNETES_API_URL=$KUBERNETES_API_URL \
+          > kubeconfig.yaml
 
       # Step 4: Base64 encode the generated Kubernetes config
       - name: Base64 Encode Kubernetes Config
