--- a/.github/workflows/create-refresh-kube-configs.yml
+++ b/.github/workflows/create-refresh-kube-configs.yml
@@ -33,6 +33,7 @@ jobs:
         run: |
           export ENV_NAME=${{ github.event.inputs.environment }}
           export KUBERNETES_API_URL=${{ vars.KUBERNETES_API_URL }}
+          echo $KUBERNETES_API_URL
           . venv/bin/activate
           jinja2 ./ansible/templates/kubeconfig-template.j2 \
           -D environment=$ENV_NAME \
