--- a/.github/workflows/lab-setup-test-k8s-access.yml
+++ b/.github/workflows/lab-setup-test-k8s-access.yml
@@ -61,6 +61,8 @@ jobs:
     
   flatten-and-test:
     runs-on: self-hosted
+    needs:
+      - create-kube-configs
 
     steps:
     - name: Set up directories
