--- a/.github/workflows/create-refresh-kube-configs.yml
+++ b/.github/workflows/create-refresh-kube-configs.yml
@@ -83,14 +83,14 @@ jobs:
             -X PUT \
             -H "Authorization: Bearer $PAT_TOKEN" \
             -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/${{ github.repository }}/environments/${{ github.event.inputs.environment }}/secrets/KUBECONFIG_BASE64 \
+                -d '{"encrypted_value": "'"$encrypted_secret"'",
+                    "key_id":"'"$public_key_id"'"}'
 
       - name: Run Update K8s Certs playbook
         run: |
           source ./kubespray/venv/bin/activate
-          ansible-playbook -i ./kubespray/inventory/${CHANGED_CLUSTER}/hosts.yml ./ansible/update-k8s-certs-pb.yml \
+          ansible-playbook -i ./kubespray/inventory/${ENV_NAME}/hosts.yml ./ansible/update-k8s-certs-pb.yml \
               -e "ansible_password=${{ secrets.SSH_PASS }}" -e "ansible_become_pass=${{ secrets.SSH_PASS }}" \
-              -e "environment_context=$CHANGED_CLUSTER"
-            https://api.github.com/repos/${{ github.repository }}/environments/${{ github.event.inputs.environment }}/secrets/KUBECONFIG_BASE64 \
-                -d '{"encrypted_value": "'"$encrypted_secret"'",
-                    "key_id":"'"$public_key_id"'"}'
+              -e "environment_context=$ENV_NAME"
 
