--- a/.github/workflows/create-refresh-kube-configs.yml
+++ b/.github/workflows/create-refresh-kube-configs.yml
@@ -89,6 +89,7 @@ jobs:
 
       - name: Run Update K8s Certs playbook
         run: |
+          export ENV_NAME=${{ github.event.inputs.environment }}
           . venv/bin/activate
           ansible-playbook -i ./clusters/$ENV_NAME/hosts.yml ./ansible/update-k8s-certs-pb.yml \
               -e "ansible_password=${{ secrets.SSH_PASS }}" -e "ansible_become_pass=${{ secrets.SSH_PASS }}" \
