--- a/clusters/prod/hosts.yml
+++ b/clusters/prod/hosts.yml
@@ -8,10 +8,10 @@ all:
       ansible_host: 192.168.101.158
       ip: 192.168.101.158
       access_ip: 192.168.101.158
-    # rocky9-prod-node3:
-    #   ansible_host: 192.168.101.159
-    #   ip: 192.168.101.159
-    #   access_ip: 192.168.101.159
+    rocky9-prod-node3:
+      ansible_host: 192.168.101.159
+      ip: 192.168.101.159
+      access_ip: 192.168.101.159
       
   children:
     kube_control_plane:
@@ -23,10 +23,13 @@ all:
       hosts:
         rocky9-prod-node1:
         rocky9-prod-node2:
+        rocky9-prod-node3:
             
     etcd:
       hosts:
         rocky9-prod-node1:
+        rocky9-prod-node2:
+        rocky9-prod-node3:
             
     k8s_cluster:
       children:
