--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -87,7 +87,7 @@ jobs:
     # Log in to ArgoCD
     - name: Login to ArgoCD
       run: |
-        argocd login $ARGOCD_SERVER \
+        argocd login $ARGOCD_SERVER:$ARGOCD_PORT \
           --username $ARGOCD_USERNAME \
           --password $ARGOCD_PASSWORD \
           --insecure
