--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -24,25 +24,25 @@ env:
   ADMIN_PASSWORD: ${{ secrets.ARGOCD_MY_ADMIN_PASSWORD }}
 
 jobs:
-  set-environment:
-    runs-on: self-hosted
-    outputs:
-      ENV_NAME: ${{ steps.detect_env.outputs.env_name }}
-    steps:
-    - name: Determine Environment
-      id: detect_env
-      run: |
-        if git diff --name-only HEAD~1 | grep '^lab/'; then
-          echo "env_name=lab" >> $GITHUB_OUTPUT
-        elif git diff --name-only HEAD~1 | grep '^prod/'; then
-          echo "env_name=prod" >> $GITHUB_OUTPUT
-        else
-          echo "env_name=lab" >> $GITHUB_OUTPUT
-        fi
+  # set-environment:
+  #   runs-on: self-hosted
+  #   outputs:
+  #     ENV_NAME: ${{ steps.detect_env.outputs.env_name }}
+  #   steps:
+  #   - name: Determine Environment
+  #     id: detect_env
+  #     run: |
+  #       if git diff --name-only HEAD~1 | grep '^lab/'; then
+  #         echo "env_name=lab" >> $GITHUB_OUTPUT
+  #       elif git diff --name-only HEAD~1 | grep '^prod/'; then
+  #         echo "env_name=prod" >> $GITHUB_OUTPUT
+  #       else
+  #         echo "env_name=lab" >> $GITHUB_OUTPUT
+  #       fi
   
   install-argocd:
-    needs: set-environment
-    environment: ${{ needs.set-environment.outputs.ENV_NAME }}
+    #needs: set-environment
+    environment: ${{ github.event.inputs.environment }}
     runs-on: self-hosted
 
     steps:
@@ -52,7 +52,7 @@ jobs:
 
     - name: Set Environment Name Variable Dynamically
       id: set-environment-variable
-      run: echo "ENV_NAME=${{ needs.set-environment.outputs.ENV_NAME }}" >> $GITHUB_ENV
+      run: echo "ENV_NAME=${{ github.event.inputs.environment }}" >> $GITHUB_ENV
 
     # Set Correct Kubernetes Context
     - name: Set Correct Kubernetes Context
