--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -147,7 +147,7 @@ jobs:
     - name: Verify Admin User
       run: |
         echo "Attempting to log in with the new admin user..."
-        argocd login $ARGOCD_SERVER \
+        argocd login $ARGOCD_SERVER:$ARGOCD_PORT \
           --username ${{ secrets.ARGOCD_MY_ADMIN_USER }} \
           --password ${{ secrets.ARGOCD_MY_ADMIN_PASSWORD }} \
           --insecure
