--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -17,7 +17,7 @@ on:
 
 env:
   ARGOCD_PORT: ${{ vars.ARGOCD_PORT }}
-  ARGOCD_SERVER: ${{ vars.ARGOCD_URL }}
+  ARGOCD_SERVER: ${{ vars.ARGOCD_SERVER }}
   ARGOCD_PASSWORD: ${{ secrets.ARGOCD_ADMIN_PASSWORD }}
   ARGOCD_USERNAME: ${{ secrets.ARGOCD_ADMIN_USER }}
   ADMIN_USERNAME: ${{ secrets.ARGOCD_MY_ADMIN_USER }}
