--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -136,6 +136,7 @@ jobs:
         " > rbac-config.yaml
 
         # Apply RBAC configmap
+        kubectl config get-contexts
         kubectl -n argocd apply -f rbac-config.yaml
 
         # Add the admin user
