--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -139,29 +139,29 @@ jobs:
         kubectl -n argocd apply -f rbac-config.yaml
 
         # Add the admin user
-        argocd account update-password --account $ADMIN_USERNAME --current-password ${{ secrets.ARGOCD_ADMIN_PASSWORD }} --new-password $ADMIN_PASSWORD
+    #     argocd account update-password --account $ADMIN_USERNAME --current-password ${{ secrets.ARGOCD_ADMIN_PASSWORD }} --new-password $ADMIN_PASSWORD
 
-        echo "Admin user $ADMIN_USERNAME created successfully."
+    #     echo "Admin user $ADMIN_USERNAME created successfully."
 
-    # Verify Admin User Creation
-    - name: Verify Admin User
-      run: |
-        echo "Attempting to log in with the new admin user..."
-        argocd login $ARGOCD_SERVER:$ARGOCD_PORT \
-          --username ${{ secrets.ARGOCD_MY_ADMIN_USER }} \
-          --password ${{ secrets.ARGOCD_MY_ADMIN_PASSWORD }} \
-          --insecure
-        echo "New admin user login successful."
+    # # Verify Admin User Creation
+    # - name: Verify Admin User
+    #   run: |
+    #     echo "Attempting to log in with the new admin user..."
+    #     argocd login $ARGOCD_SERVER:$ARGOCD_PORT \
+    #       --username ${{ secrets.ARGOCD_MY_ADMIN_USER }} \
+    #       --password ${{ secrets.ARGOCD_MY_ADMIN_PASSWORD }} \
+    #       --insecure
+    #     echo "New admin user login successful."
 
-    # Add the cluster to ArgoCD if not exists
-    - name: Add Cluster to ArgoCD
-      run: |
-        CLUSTER_NAME=$ENV_NAME-cluster
-        CONTEXT=$(kubectl config current-context)
-        EXISTS=$(argocd cluster get $CLUSTER_NAME || echo "not found")
-        if [[ "$EXISTS" == "not found" ]]; then
-          echo "Cluster $CLUSTER_NAME not found. Adding it..."
-          argocd cluster add $CONTEXT --name $CLUSTER_NAME --yes
-        else
-          echo "Cluster $CLUSTER_NAME already exists."
-        fi
+    # # Add the cluster to ArgoCD if not exists
+    # - name: Add Cluster to ArgoCD
+    #   run: |
+    #     CLUSTER_NAME=$ENV_NAME-cluster
+    #     CONTEXT=$(kubectl config current-context)
+    #     EXISTS=$(argocd cluster get $CLUSTER_NAME || echo "not found")
+    #     if [[ "$EXISTS" == "not found" ]]; then
+    #       echo "Cluster $CLUSTER_NAME not found. Adding it..."
+    #       argocd cluster add $CONTEXT --name $CLUSTER_NAME --yes
+    #     else
+    #       echo "Cluster $CLUSTER_NAME already exists."
+    #     fi
