--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -139,9 +139,9 @@ jobs:
         kubectl -n argocd apply -f rbac-config.yaml
 
         # Add the admin user
-    #     argocd account update-password --account $ADMIN_USERNAME --current-password ${{ secrets.ARGOCD_ADMIN_PASSWORD }} --new-password $ADMIN_PASSWORD
+        argocd account update-password --account $ADMIN_USERNAME --current-password ${{ secrets.ARGOCD_ADMIN_PASSWORD }} --new-password $ADMIN_PASSWORD
 
-    #     echo "Admin user $ADMIN_USERNAME created successfully."
+        echo "Admin user $ADMIN_USERNAME created successfully."
 
     # # Verify Admin User Creation
     # - name: Verify Admin User
