--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -96,8 +96,7 @@ jobs:
     - name: Add Cluster to ArgoCD
       run: |
         kubectl config current-context
-        argocd context
-        argocd cluster list --insecure
+        argocd cluster list
         CLUSTER_NAME=$ENV_NAME-cluster
         CONTEXT=$(kubectl config current-context)
         EXISTS=$(argocd cluster get $CLUSTER_NAME || echo "not found")
