--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -97,10 +97,7 @@ jobs:
       run: |
         kubectl config current-context
         argocd context 192.168.101.157:31372
-        argocd login $ARGOCD_SERVER:$ARGOCD_PORT \
-          --username $ARGOCD_USERNAME \
-          --password $ARGOCD_PASSWORD \
-          --insecure
+        argocd version
         argocd --loglevel debug cluster list
         CLUSTER_NAME=$ENV_NAME-cluster
         CONTEXT=$(kubectl config current-context)
