--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -97,7 +97,7 @@ jobs:
       run: |
         kubectl config current-context
         argocd context 192.168.101.157:31372
-        argocd version
+        env | grep -i argocd
         argocd --loglevel debug cluster list
         CLUSTER_NAME=$ENV_NAME-cluster
         CONTEXT=$(kubectl config current-context)
