--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -98,7 +98,7 @@ jobs:
         kubectl config current-context
         argocd context 192.168.101.157:31372
         env | grep -i argocd
-        argocd --loglevel debug cluster list
+        argocd --server 192.168.101.157:31372 cluster list
         CLUSTER_NAME=$ENV_NAME-cluster
         CONTEXT=$(kubectl config current-context)
         EXISTS=$(argocd cluster get $CLUSTER_NAME || echo "not found")
